Fix view more spacing

--- a/app/styles/ember-3d-folding-panel.scss
+++ b/app/styles/ember-3d-folding-panel.scss
@@ -203,7 +203,7 @@ Main content
 		}
 		text-transform: uppercase;
 		letter-spacing: 1px;
-		padding: 1em 1.3em;
+		padding: 1.3em 1.3em 1em 1.3em;
 		border-radius: 50em;
 		border: 1px solid $color-6;
 	}
